@startuml 17-clases-aplicacion-nucleo
title Aplicación — núcleo del motor (business.ordermanager.aplicacion): ServicioContinuarOrden, ProcesadorOrden y el lease del token
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

package "puerto.entrada" {
  interface CasoUsoContinuarOrden {
    +continuarSiguiente() : boolean
    +hayTrabajoPendiente() : boolean
  }
}

package "servicio" {
  class ServicioContinuarOrden <<@Service>> {
    -procesadores : Map<TipoOrden, ProcesadorOrden>
    -repo : RepositorioOrden
    -politica : PoliticaReintentos
    -lease : Duration
    -lote : int  «ordermanager.planificador.lote, 16»
    -observador : PuertoObservadorEjecucion
    -self : ServicioContinuarOrden  «proxy auto-inyectado, @Lazy\n(ver ConfiguracionOrderManager); establecerSelf(self)»
    +continuarSiguiente() : boolean
    +hayTrabajoPendiente() : boolean
    +reclamarToken(id) : Optional<OrdenRoot>  «@Transactional»
    +programarReintento(orden)  «@Transactional»
    -reclamarYEjecutar(id, tipo) : boolean
  }
  note right of ServicioContinuarOrden
    reclamarYEjecutar() llama a self.reclamarToken(id) -- vía el
    proxy, para que @Transactional no se ignore por auto-invocación
    --: carga la orden, estaViva() (si no ->
    observador.reclamoPerdido(NO_VIVA)) + turnoVencido(ahora) (si no
    -> observador.reclamoPerdido(NO_EJECUTABLE) -- re-check de
    OrdenRoot, espejo de buscarCandidatas, contra la fila recién
    cargada: otro actor pudo aparcarla entre el barrido y este
    reclamo) + tieneTokenVigente() (si sí ->
    observador.reclamoPerdido(TOKEN_VIGENTE)) + asignarToken()
    +guardar(orden) -> observador.reclamoGanado(); catch
    ConcurrenciaOptimistaException en reclamarYEjecutar ->
    observador.reclamoPerdido(COLISION_OPTIMISTA) +
    colisionOptimista("reclamarToken") -> Optional.empty() (otro
    worker/pod la tiene). Como guardar() incrementa la version en
    exactamente 1 (JPA @Version / RepositorioOrdenEnMemoria),
    reclamarToken NO recarga: reconstruye esa MISMA instancia con
    version+1 (conVersionRecienGuardada) y devuelve Optional.of(orden)
    -- lista para el primer paso sin una 2ª carga redundante. Si
    reclama: procesadores.get(tipo) (si no hay ProcesadorOrden
    registrado para ese tipo -> IllegalStateException) y bucle
    (hayMasPasos, sin while(true)): el PRIMER paso reutiliza esa
    instancia; mide con System.nanoTime() y llama a
    procesador.ejecutarPaso(orden) (otro bean: cross-bean, el proxy
    de ESE bean aplica sin truco); catch ConcurrenciaOptimistaException
    -> observador.colisionOptimista("ejecutarPaso") + return; catch
    RuntimeException -> observador.pasoFallido(intento, error) +
    self.programarReintento(orden, error) -- vía proxy -- sobre esa
    MISMA orden (catch ConcurrenciaOptimistaException ->
    observador.colisionOptimista("programarReintento") + rethrow, sin
    reintentoProgramado) + observador.reintentoProgramado(intento,
    espera) + return; si no lanza: observador.pasoCompletado(duracionMs)
    y según la señal: HayMasTrabajo -> repo.cargar(id) de verdad (el
    procesador ya guardó esa instancia: su version en memoria quedó
    obsoleta) y continúa con la orden recargada; Aparcar ->
    observador.ordenAparcada(ventana) + return (ya persistido por el
    procesador); Finalizada -> observador.ordenFinalizada() + return
    (ídem; en el diseño actual siempre es éxito, ver
    PuertoObservadorEjecucion). continuarSiguiente() (pull de cada
    worker): recorre repo.buscarEjecutables(ahora, lote) y procesa la
    PRIMERA que gane el reclamo -> true; lote agotado sin ganar ->
    false. hayTrabajoPendiente(): repo.hayEjecutables(ahora).
  end note

  interface ProcesadorOrden {
    +tipo() : TipoOrden
    +ejecutarPaso(OrdenRoot) : SenalPaso
  }
  note right of ProcesadorOrden
    SPI de procesamiento: una implementación por TipoOrden. El motor
    solo conoce esta interfaz — no importa ninguna saga concreta
    (regla de frontera ArchUnit). Las 4 implementaciones
    (ServicioSagaPrincipal/Secundaria1/2/3, ver 18-21) viven en
    business.sagas y se registran en el
    Map&lt;TipoOrden, ProcesadorOrden&gt; que arma ConfiguracionOrderManager
    (ver 23) a partir de un List&lt;ProcesadorOrden&gt; inyectado por
    Spring: cada una recibe el agregado YA CARGADO por
    ServicioContinuarOrden (la instancia recién reclamada en el
    primer paso, o recargada de verdad en los siguientes -- ver nota
    de ServicioContinuarOrden), hace el REST del paso FUERA de tx
    (puede lanzar) y llama
    a self.aplicarX(...) -- vía su propio proxy auto-inyectado,
    @Transactional -- que aplica el resultado sobre esa MISMA
    instancia de OrdenRoot (sin recargar): el Proceso que contiene es
    un VO inmutable (ver 14), así que aplicarX captura la instancia
    nueva que devuelve la transición (saga.aplicarYAvanzar(...) etc.)
    y la fija con orden.reemplazarProceso(nuevaSaga, ahora) antes de
    la parte operativa de la señal
    (resetearIntentos(ahora)+renovarLease(lease, ahora) | aparcar() |
    finalizar()), con un único var ahora = Instant.now() hoisteado al
    principio de cada método @Transactional y reutilizado en todas
    sus mutaciones (fija también actualizadaEn, ver 14), y guarda una
    única vez: si otro actor escribió con el REST en vuelo, guardar
    falla por version (takeover seguro).
  end note

  class "SenalPaso" as SenalPaso <<sealed>> {
    HayMasTrabajo()
    Aparcar(ventana : Duration)
    Finalizada()
  }
}

package "puerto.salida (transversales)" {
  interface RepositorioOrden <<@Repository>> {
    +crear(OrdenRoot)
    +cargar(OrdenId) : OrdenRoot
    +guardar(OrdenRoot)  «lanza ConcurrenciaOptimistaException»
    +buscarEjecutables(ahora, limite) : List<CandidataOrden>
    +hayEjecutables(ahora) : boolean
    +externalIdsFinalizadosAntesDe(corte) : List<ExternalId>
    +purgarPorExternalIds(ids) : long
    record CandidataOrden(ordenId, tipo)
  }
  note right of RepositorioOrden
    ÚNICO puerto de escritura del agregado: siempre persiste o
    rehidrata OrdenRoot completo (ejecución + proceso + auditoría).
    buscarEjecutables: proximo_reintento_en<=ahora AND resultado
    IS NULL AND (token_trabajador IS NULL OR token_expira_en<=ahora)
    — el segundo OR reclama tokens de pods muertos al vencer el lease.
    Ordenadas por prioridad DESC (VO neutro OrdenRoot.prioridad, ver
    14: el motor ordena por él sin saber quién lo fija), luego
    creada_en ASC (bookkeeping de infraestructura, no en el
    dominio), luego proximo_reintento_en ASC.
    hayEjecutables: MISMO predicado, sin cargar filas (EXISTS
    barato para que el planificador decida si despierta workers).
    externalIdsFinalizadosAntesDe/purgarPorExternalIds: purga POR
    TRAMITACIÓN (grupo de órdenes que comparten external_id, no una
    orden suelta) que usan ServicioPurgarAdjuntos/Completadas de
    business.sagas (ver 09-10 y 22); el motor solo expone la
    selección/el borrado genéricos, sin conocer "adjuntos" ni
    "datos_negocio".
  end note

  interface PuertoObservadorEjecucion {
    +reclamoGanado(id, tipo)
    +reclamoPerdido(id, tipo, MotivoReclamoPerdido)
    +colisionOptimista(id, tipo, operacion : String)
    +pasoCompletado(id, tipo, duracionMs : long)
    +pasoFallido(id, tipo, intento : int, DetalleError)
    +reintentoProgramado(id, tipo, intento : int, espera : Duration)
    +ordenAparcada(id, tipo, ventana : Duration)
    +ordenFinalizada(id, tipo)
  }
  enum MotivoReclamoPerdido {
    TOKEN_VIGENTE
    NO_VIVA
    NO_EJECUTABLE
    COLISION_OPTIMISTA
  }
  PuertoObservadorEjecucion ..> MotivoReclamoPerdido
  note right of PuertoObservadorEjecucion
    Fase 0 del plan de pruebas de carga: observa los momentos
    relevantes del bucle (ver nota de ServicioContinuarOrden) para
    un log estructurado, sin que la capa de aplicación dependa de
    SLF4J. Implementado por AdaptadorObservadorLog
    (infraestructure.ordermanager.eventos, ver 24), una línea por
    evento. "Ticket abierto" NO pasa por este puerto: nace ya en
    AdaptadorTicketsLog (ver 22/24); las purgas por tramitación
    (ver 09-10) tampoco: sus incidencias pasan por PuertoIncidencias,
    no por este observador. Vocabulario neutro del motor: ningún
    método ni tipo nombra "saga". reintentoProgramado tiene un
    segundo emisor fuera de este bucle:
    business.sagas.aplicacion.servicio.comun.
    ServicioRegistrarRespuestaSecundaria2 (ver 20) lo llama al
    reprogramar tras una respuesta Kafka con exito=false, un fallo de
    negocio que nunca pasa por ejecutarPaso.
  end note

  interface PuertoIncidencias {
    +abrir(tarea : String, causa : String, intentos : int)
  }
  note right of PuertoIncidencias
    Puerto genérico de incidencias operativas (vocabulario neutro:
    no nombra "purga" ni "saga"): lo llama ReintentoOperativo (ver
    22) cuando una tarea de fondo agota sus reintentos, con la
    causa del último fallo. Implementado por AdaptadorIncidenciasLog
    (infraestructure.ordermanager.eventos, ver 24): un log.error con
    evento=incidencia_abierta, mismo estilo que AdaptadorTicketsLog.
  end note
}

note as NTx
  Frontera transaccional: @Transactional (jakarta.transaction),
  directamente en los métodos de estos POJOs — ya no hay un puerto
  UnidadDeTrabajo. Spring envuelve en un proxy transaccional también
  los beans devueltos por métodos @Bean (ver ConfiguracionOrderManager,
  23-24). Una auto-invocación (this.metodo() dentro del mismo bean)
  NO pasa por ese proxy: los servicios con REST fuera de tx
  (ServicioContinuarOrden y los ProcesadorOrden de sagas — ver 18-21)
  se inyectan a sí mismos ("self", el proxy, vía un parámetro @Lazy
  del método @Bean) para invocar su parte @Transactional a través de él.
end note
NTx .. ServicioContinuarOrden

CasoUsoContinuarOrden <|.. ServicioContinuarOrden
ServicioContinuarOrden --> RepositorioOrden
ServicioContinuarOrden --> ProcesadorOrden : Map<TipoOrden, ->\n(una por tipo de orden)
ServicioContinuarOrden --> PuertoObservadorEjecucion
ServicioContinuarOrden ..> SenalPaso : interpreta la señal
ProcesadorOrden ..> SenalPaso : devuelve

note as NLease
  Lease del token (robustez ante caída de pod): asignarToken() fija
  tokenExpiraEn = ahora + lease (config ordermanager.lease, p. ej.
  PT10M); renovarLease() lo alarga en la tx de cada paso completado
  (no necesita cubrir la orden entera, solo el peor REST de un paso).
  Si un pod muere con el token asignado, al vencer el lease la orden
  vuelve a ser candidata de buscarEjecutables() y otro pod la
  reclama (optimistic lock: si dos pods ven el mismo token
  caducado, solo uno gana al guardar). Si el pod solo iba lento
  (no muerto), su guardar() posterior falla por version y se retira.
end note
NLease .. RepositorioOrden
NLease .. ServicioContinuarOrden

note as NIniciar
  CasoUsoIniciarTramitacion / ServicioIniciarTramitacion (crea el
  agregado inicial) NO viven aquí: son específicos de cómo arranca
  una tramitación de sagas y viven en business.sagas.aplicacion —
  ver 22 (clases) y 01 (secuencia). El motor no expone ningún caso
  de uso de "creación inicial": cada aplicación que lo reutilice
  decide cómo arranca sus propias órdenes usando
  RepositorioOrden.crear(...) directamente.
end note

@enduml
